Shorten release notes

--- a/upcoming-release-notes/5911.md
+++ b/upcoming-release-notes/5911.md
@@ -3,4 +3,4 @@ category: Bugfix
 authors: [guizaa]
 ---
 
-Fixes issue where when duplicating a split transaction, the new duplicates split transaction's subtransactions are not in the same order as the original. This fix also fixes larger issue of duplicate transactions having an undefined sort order when realized
+Adds functionality to maintain sort order when duplicating a split transaction and generate new valid sort order for duplicate transactions.
