Update author name in upcoming release notes for transaction table spacing fix

--- a/upcoming-release-notes/5994.md
+++ b/upcoming-release-notes/5994.md
@@ -1,6 +1,6 @@
 ---
 category: Bugfix
-authors: [matiss]
+authors: [MatissJanis]
 ---
 
 Transaction table: add space between searchbar and loading icon
