--- a/upcoming-release-notes/6042.md
+++ b/upcoming-release-notes/6042.md
@@ -3,4 +3,4 @@ category: Bugfix
 authors: [Jayant-Jeet]
 ---
 
-Include the current week in Net Worth report when viewing by Weekly interval. Fixes [#5986](https://github.com/actualbudget/actual/issues/5986)
+Include the current week in Net Worth report when viewing by Weekly interval.
