--- a/upcoming-release-notes/6082.md
+++ b/upcoming-release-notes/6082.md
@@ -3,4 +3,4 @@ category: Bugfix
 authors: [Brostash]
 ---
 
-Small fix to how the cleared field is calculated with importing transactions related to bug Fixes#5922
+Prefer the incoming transaction's cleared status when importing from file/bank sync
