Update authors and category in release notes

--- a/upcoming-release-notes/6092.md
+++ b/upcoming-release-notes/6092.md
@@ -1,6 +1,6 @@
 ---
-category: Enhancement
-authors: [copilot-swe-agent[bot]]
+category: Enhancements
+authors: [MatissJanis]
 ---
 
 Custom reports now include hidden categories and uncategorized transactions by default
