--- a/upcoming-release-notes/6046.md
+++ b/upcoming-release-notes/6046.md
@@ -3,4 +3,4 @@ category: Bugfix
 authors: [ishanjain28]
 ---
 
-do not clear notes input field on action.op change
+Prevent notes input field from clearing when action.op is changed
