--- a/upcoming-release-notes/5946.md
+++ b/upcoming-release-notes/5946.md
@@ -3,4 +3,4 @@ category: Bugfix
 authors: [stefanedwards]
 ---
 
-Removes dollar symbol from template string examples. Fixes #5945
+Removes dollar symbol from template string examples.
