--- a/upcoming-release-notes/6137.md
+++ b/upcoming-release-notes/6137.md
@@ -3,4 +3,4 @@ category: Features
 authors: [tabedzki]
 ---
 
-Budget Analysis: a report that tracks the balance of a Budget Category 
+Add "Budget Analysis" : a report that tracks the balance of a Category simliar to the "Cash Flow" Report
