fix capitalization in release notes.

--- a/upcoming-release-notes/6142.md
+++ b/upcoming-release-notes/6142.md
@@ -3,4 +3,4 @@ category: Maintenance
 authors: [accountingnerd]
 ---
 
-update validate-user.js to validate-user.ts.
+Update validate-user.js to validate-user.ts.
