Update RuleEditor to set default value as an empty string; refactor ScheduleEditForm to use 'repeats' instead of isRecurConfig; remove unused isRecurConfig function from schedules module.

--- a/upcoming-release-notes/6175.md
+++ b/upcoming-release-notes/6175.md
@@ -3,4 +3,4 @@ category: Bugfix
 authors: [MatissJanis]
 ---
 
-Fix schedule page crashing when many conditions added
+Fix rule page crashing when many actions added
