Update release notes with button wording changes
Changes wording for clarity and adds a new exit option.

--- a/upcoming-release-notes/6220.md
+++ b/upcoming-release-notes/6220.md
@@ -1,4 +1,7 @@
-## Release Notes
+---
+category: Changes
+authors: [Juulz]
+---
 
 Changes wording of "Done reconciling" button to "Exit reconciling".
 Adds "Exit to lock cleared transactions" under "All reconciled!" for clarity when exiting a completed reconciliation.
