Clarify wording for reconciliation exit options

--- a/upcoming-release-notes/6220.md
+++ b/upcoming-release-notes/6220.md
@@ -3,5 +3,4 @@ category: Enhancements
 authors: [Juulz]
 ---
 
-Changes wording of "Done reconciling" button to "Exit reconciling".
-Adds "Exit to lock cleared transactions" under "All reconciled!" for clarity when exiting a completed reconciliation.
+Changes and clarifies wording of "Done reconciling" button to "Exit reconciling". Adds "Exit to lock cleared transactions" under "All reconciled!".
