--- a/upcoming-release-notes/6220.md
+++ b/upcoming-release-notes/6220.md
@@ -1,7 +1,7 @@
 ---
 category: Changes
 category: Enhancements
-authors: [Juulz]
+authors: [Juulz, matt-fidd]
 ---
 
-Changes wording of "Done reconciling" button to "Exit reconciling".
+Changes wording of "Done reconciling" button to "Lock transactions" when _All reconciled!_, or "Exit reconciling" if leaving unbalanced.
