--- a/upcoming-release-notes/6220.md
+++ b/upcoming-release-notes/6220.md
@@ -1,6 +1,6 @@
 ---
 category: Enhancements
-authors: [Juulz]
+authors: [Juulz, matt-fidd]
 ---
 
-Changes and clarifies wording of "Done reconciling" button to "Exit reconciling". Adds "Exit to lock cleared transactions" under "All reconciled!".
+Changes and clarifies wording of "Done reconciling" button to "Lock transactions" when _All reconciled!_ or "Exit reconciliation if leaving unbalanced.
