--- a/upcoming-release-notes/5984.md
+++ b/upcoming-release-notes/5984.md
@@ -3,4 +3,4 @@ category: Enhancements
 authors: [matt-fidd]
 ---
 
-Make bank sync accout linking modal mobile responsive
+Make bank sync account linking modal mobile responsive
