resolving lint warnings and recommendation on the test query

--- a/upcoming-release-notes/5856.md
+++ b/upcoming-release-notes/5856.md
@@ -1,6 +1,6 @@
 ---
 category: Enhancements
-authors: [Golenspade]
+authors: [Golenspade, Respheal]
 ---
 
 Preserve splits when manually merging transactions
