--- a/upcoming-release-notes/6220.md
+++ b/upcoming-release-notes/6220.md
@@ -3,4 +3,4 @@ category: Enhancements
 authors: [Juulz, matt-fidd]
 ---
 
-Changes wording of "Done reconciling" button to "Lock transactions" when _All reconciled!_, or "Exit reconciliation" if leaving unbalanced.
+Changes and clarifies wording of "Done reconciling" button to "Lock transactions" when _All reconciled!_ or "Exit reconciliation if leaving unbalanced.
