--- a/packages/docs/blog/2025-12-03-release-25-12-0.md
+++ b/packages/docs/blog/2025-12-03-release-25-12-0.md
@@ -67,7 +67,7 @@ Docker Tag: v25.12.0
 - [#6100](https://github.com/actualbudget/actual/pull/6100) Prevent the settings page from overflowing horizontally on mobile — thanks @MatissJanis
 - [#6119](https://github.com/actualbudget/actual/pull/6119) ForceReload: change web update logic from .reload() to .applyAppUpdate() — thanks @MatissJanis
 - [#6130](https://github.com/actualbudget/actual/pull/6130) Fix OpenID token expiration to correctly use seconds from config — thanks @dnitros
-- [#6145](https://github.com/actualbudget/actual/pull/6145) On iOS 26 Safari, <input type="date"> could render taller than expected. This has been fixed by disabling native appearance to enforce consistent box-sizing. — thanks @pyfisssh
+- [#6145](https://github.com/actualbudget/actual/pull/6145) On iOS 26 Safari, `<input type="date">` could render taller than expected. This has been fixed by disabling native appearance to enforce consistent box-sizing. — thanks @pyfisssh
 - [#6162](https://github.com/actualbudget/actual/pull/6162) Force reload: update logic for service worker data refresh — thanks @MatissJanis
 - [#6169](https://github.com/actualbudget/actual/pull/6169) Fix rare schedules page crash — thanks @matt-fidd
 - [#6175](https://github.com/actualbudget/actual/pull/6175) Fix rule page crashing when many actions added — thanks @MatissJanis
