remove icns from allowed spelling to avoid accidental missspellings

--- a/packages/docs/blog/2025-12-03-release-25-12-0.md
+++ b/packages/docs/blog/2025-12-03-release-25-12-0.md
@@ -92,7 +92,7 @@ This release contains the following notable improvements, along with numerous fi
 - [#6029](https://github.com/actualbudget/actual/pull/6029) Merge documentation into the main repository — thanks @matt-fidd
 - [#6039](https://github.com/actualbudget/actual/pull/6039) Refactored all `Stack` component usages to `SpaceBetween` component across the codebase for better consistency and simplified API. — thanks @MatissJanis
 - [#6060](https://github.com/actualbudget/actual/pull/6060) Upgrade vitest to v4 — thanks @matt-fidd
-- [#6076](https://github.com/actualbudget/actual/pull/6076) Add 512x512 image to icns file for Linux and Mac Icons — thanks @MikesGlitch
+- [#6076](https://github.com/actualbudget/actual/pull/6076) Add 512x512 image to binary icons file for Linux and Mac Icons — thanks @MikesGlitch
 - [#6085](https://github.com/actualbudget/actual/pull/6085) Remove unneeded property from Flathub app info description — thanks @MikesGlitch
 - [#6091](https://github.com/actualbudget/actual/pull/6091) TypeScript: refactor FiltersMenu to TS — thanks @MatissJanis
 - [#6095](https://github.com/actualbudget/actual/pull/6095) Initial cleanup following the docs repository merge — thanks @matt-fidd
