Update release notes for PR #6263

--- a/upcoming-release-notes/6263.md
+++ b/upcoming-release-notes/6263.md
@@ -3,4 +3,4 @@ category: Bugfix
 authors: [mreimbold]
 ---
 
-Exclude transfers from dashboard summary cards
+Exclude transfers from summary cards in the default dashboard
