:art: Remove radius from apple-touch-icon (#6298)
* remove radius from apple-touch-icon

* bigger

* release notes

--- a/upcoming-release-notes/6298.md
+++ b/upcoming-release-notes/6298.md
@@ -1,6 +1,6 @@
 ---
-category: Maintenance
-authors: [matt-fidd]
+category: Bugfix
+authors: [MikesGlitch]
 ---
 
-Bump express to 5.2.1
+Fix PWA icon showing white border on older versions of ios
