--- a/packages/docs/blog/2025-12-30-roadmap-for-2026.md
+++ b/packages/docs/blog/2025-12-30-roadmap-for-2026.md
@@ -61,7 +61,7 @@ This would also include the ability to predict the total needed to meet all set 
 
 **Rewrite the transaction table**:  The transaction table is probably the most import feature of the app, even more so than the budget itself.
 The code for the transaction table is complicated, and not very conducive to new features.
-We would like to rewrite this code to be more maintainable, more accessible to new contributors, and more extendable with new features such as resizeable columns.
+We would like to rewrite this code to be more maintainable, more accessible to new contributors, and more extendable for new features such as resizing columns.
 
 **Debt account type**: Currently Actual only has a standard account, you can add transactions and there is a balance.
 This is perfect for checking and savings accounts, but less great for loans.
