add cli feature

--- a/packages/docs/blog/2025-12-30-roadmap-for-2026.md
+++ b/packages/docs/blog/2025-12-30-roadmap-for-2026.md
@@ -21,6 +21,7 @@ My favorites in approximately chronological order are:
 - OIDC and Multi-user support
 - Adjustable upcoming time frame for schedules
 - Multiple new report types
+- NPM package for the sync server
 - Translations
 - Bank sync management page
 - Desktop app improvements such as the embedded server
