chore(): update release note

--- a/upcoming-release-notes/6382.md
+++ b/upcoming-release-notes/6382.md
@@ -4,3 +4,4 @@ authors: [ttlgeek]
 ---
 
 Disable 'oneOf', 'notOneOf' and 'hasTags' filters for filters of type Note
+Fix 'hasTags' filter to work correctly with note tags
