chore(): update release note

--- a/upcoming-release-notes/6382.md
+++ b/upcoming-release-notes/6382.md
@@ -3,5 +3,4 @@ category: Bugfix
 authors: [ttlgeek]
 ---
 
-Disable 'oneOf', 'notOneOf' and 'hasTags' filters for filters of type Note
-Fix 'hasTags' filter to work correctly with note tags
+Disable 'oneOf' and 'notOneOf' filters for filters of type Note, and fix 'hasTags' filter to work correctly with note tags
