Apply suggestions from code review
Co-authored-by: Julian Dominguez-Schatz <julian.dominguezschatz@gmail.com>
Co-authored-by: Kelly Arwine <2262535+kellyarwine@users.noreply.github.com>

--- a/packages/docs/blog/2025-12-30-roadmap-for-2026.md
+++ b/packages/docs/blog/2025-12-30-roadmap-for-2026.md
@@ -9,16 +9,16 @@ authors: youngcw
 ---
 
 We were able to accomplish a lot in 2025.
-Lets look back over the year and also look at whats to come.
+Lets look back over the year and also look at what's to come.
 
 <!--truncate-->
 
 ## 2025 in review
-Its always fun to look back and see all the progress made in Actual over the course of a year.
-Its easy to forget how many of the features we love weren't available back at the beginning of the year.
+It's always fun to look back and see all the progress made in Actual over the course of a year.
+It's easy to forget how many of the features we love weren't available back at the beginning of the year.
 
 My favorites in approximately chronological order are:
-- OIDC and Multi-user support
+- OIDC and multi-user support
 - Adjustable upcoming time frame for schedules
 - Multiple new report types
 - NPM package for the sync server
@@ -60,9 +60,9 @@ This would also include the ability to predict the total needed to meet all set 
 
 **Mobile view feature parity**: The mobile view has received many updates this year but it still lacks a number of features that are available on desktop.  We would like to bring that disparity down to close to 0 this year.
 
-**Rewrite the transaction table**:  The transaction table is probably the most import feature of the app, even more so than the budget itself.
-The code for the transaction table is complicated, and not very conducive to new features.
-We would like to rewrite this code to be more maintainable, more accessible to new contributors, and more extendable for new features such as resizing columns.
+**Rewrite the transaction table**:  The transaction table is probably the most important feature of the app, even more so than the budget itself.
+The code for the transaction table is complicated, and not conducive to new features.
+We plan to rewrite this code to be more maintainable, more accessible to new contributors, and more extendable for new features such as resizing columns.
 
 **Debt account type**: Currently Actual only has a standard account, you can add transactions and there is a balance.
 This is perfect for checking and savings accounts, but less great for loans.
@@ -71,7 +71,7 @@ The ability to automate this is technically already available with rules and sch
 We will look at what other account types would make sense for the base app, but with plugins the possibilities are endless.
 
 **Better and faster code tests**: We have stared work on upgrading our CI/CD to use Rust based tooling.
-This speeds up the tests immensely and makes development and testing faster,
+This speeds up the tests immensely and makes development and testing faster.
 
 
 
