--- a/packages/docs/blog/2025-12-20-roadmap-for-2026.md
+++ b/packages/docs/blog/2025-12-20-roadmap-for-2026.md
@@ -1,6 +1,6 @@
 ---
 title: Roadmap for 2026
-description: We were able to accomplish a lot in 2025. Lets look back over the year and also look at whats to come.
+description: We were able to accomplish a lot in 2025. Let's look back over the year and also look at whats to come.
 date: 2025-12-20T10:00
 slug: roadmap-for-2026
 tags: [announcement]
@@ -10,7 +10,7 @@ authors: youngcw
 
 Hello Actual Budgeters!
 Another year has gone by with many fixes and upgrades to Actual.
-Lets look back over the year and also look at what's to come.
+Let's look back over the year and also look at what's to come.
 
 <!--truncate-->
 
