--- a/packages/docs/blog/2025-12-20-roadmap-for-2026.md
+++ b/packages/docs/blog/2025-12-20-roadmap-for-2026.md
@@ -1,6 +1,6 @@
 ---
 title: Roadmap for 2026
-description: We were able to accomplish a lot in 2025. Let's look back over the year and also look at whats to come.
+description: We were able to accomplish a lot in 2025. Let's look back over the year and also look at what's to come.
 date: 2025-12-20T10:00
 slug: roadmap-for-2026
 tags: [announcement]
@@ -34,8 +34,8 @@ My favorites in approximately chronological order are:
 - Budget Currencies (still experimental)
 - Quickly add single schedules from the account view
 
-**Note on Translations:**  Translation in a never ending project.
-Every month there are new or modified strings that need translated.
+**Note on Translations:**  Translations are a never-ending project.
+Every month there are new or modified strings that need to be translated.
 We could use as many contributors to translation as we can get.
 If you are interested in helping translate Actual into other languages see [our translation guide].
 
@@ -44,9 +44,9 @@ I will touch on that more below.
 
 ### Maintainer and contributor payments
 This year we started paying small stipends to the core maintainer team, and giving out SWAG items to other contributors.
-The maintainer stipends are based on points received for doing the necessary, but not very exciting parts, of maintaining Actual
+The maintainer stipends are based on points received for doing the necessary, but not very exciting, parts of maintaining Actual.
 This is only possible because of the generous donations from you the users.
-Many of you donate regularly and there are over 8000 Pikapods users who's hosting fees partially go towards supporting Actual.
+Many of you donate regularly and there are over 8000 Pikapods users whose hosting fees partially go towards supporting Actual.
 We offer a very hearty thank you to those who are donating.
 See the bottom of the post for ways to support the project if you would like to donate.
 
@@ -55,7 +55,7 @@ See the bottom of the post for ways to support the project if you would like to 
 **Plugins**: We have been working on adding plugins to allow users to more easily add functionality to the app without the need to add said feature to the base app.
 The feature is not quite ready as plugins have a tendency to break existing features, which slows down development a great deal.
 We are doing everything we can to not break existing features that we know you rely on.
-Our hope is to have the feature ready for you develop for in the first few months of 2026.
+Our hope is to have plugins ready for you to build on in the first few months of 2026.
 
 The first plugins we will be adding will be to migrate the existing bank sync providers.
 We also are looking at adding multiple new providers soon after.
