--- a/upcoming-release-notes/6416.md
+++ b/upcoming-release-notes/6416.md
@@ -3,4 +3,4 @@ category: Bugfix
 authors: [Tundesjaiyesmi]
 ---
 
-Fixed the issue of duplicate keyboard shortcuts for Date and Transactions but making that of Date use the Shift hotkey (Shift + T).
+Fixed the issue of duplicate keyboard shortcuts for date and add transaction by changing the date hotkey to `E`
