Standardize quotation marks across multiple files
- Replace curly quotes with straight quotes in various documentation and code files for consistency and improved readability.
- Update error messages, comments, and documentation to ensure uniformity in string formatting.

--- a/packages/docs/blog/2023-01-12-release-23.1.12.md
+++ b/packages/docs/blog/2023-01-12-release-23.1.12.md
@@ -25,13 +25,13 @@ Version: 23.1.12
 - [#403](https://github.com/actualbudget/actual/pull/403) Replace URLs to point to https://actualbudget.github.io/docs — thanks @shall0pass
 - [#413](https://github.com/actualbudget/actual/pull/413) feat: allow creating test budget in Netlify deployments — thanks @MatissJanis
 - [#420](https://github.com/actualbudget/actual/pull/420) feat: creating test budget on the config page — thanks @MatissJanis
-- [#426](https://github.com/actualbudget/actual/pull/426) Move “Find schedules” to a button on the Schedules page — thanks @j-f1
+- [#426](https://github.com/actualbudget/actual/pull/426) Move "Find schedules" to a button on the Schedules page — thanks @j-f1
 - [#435](https://github.com/actualbudget/actual/pull/435) Read-only Responsive view — thanks @trevdor
 - [#440](https://github.com/actualbudget/actual/pull/440) Further iteration on the sidebar design — thanks @j-f1
 
 ### Bugfix
 
-- [#423](https://github.com/actualbudget/actual/pull/423) Improve handling of “no server” state — thanks @j-f1
+- [#423](https://github.com/actualbudget/actual/pull/423) Improve handling of "no server" state — thanks @j-f1
 - [#430](https://github.com/actualbudget/actual/pull/430) fix: select date filtering by month #406 🚑 — thanks @iurynogueira
 - [#441](https://github.com/actualbudget/actual/pull/441) Fix overlap of version info and server URL — thanks @trevdor
 
