--- a/packages/docs/blog/2023-02-09-release-23.2.9.md
+++ b/packages/docs/blog/2023-02-09-release-23.2.9.md
@@ -31,7 +31,7 @@ Version: 23.2.9
 
 ### Bugfix
 
-- [#640](https://github.com/actualbudget/actual/pull/640) Fix coloring of the “Split Transaction” button in the category picker — thanks @j-f1
+- [#640](https://github.com/actualbudget/actual/pull/640) Fix coloring of the "Split Transaction" button in the category picker — thanks @j-f1
 - [#641](https://github.com/actualbudget/actual/pull/641) Fix prop name for button to enable e2ee — thanks @j-f1
 
 ### Maintenance
