--- a/packages/docs/blog/2023-03-13-release-23.3.2.md
+++ b/packages/docs/blog/2023-03-13-release-23.3.2.md
@@ -44,7 +44,7 @@ Version: 23.3.2
 ### Bugfix
 
 - [#156](https://github.com/actualbudget/actual-server/pull/156) Re-generate nordigen token — thanks @fstybel
-- [#157](https://github.com/actualbudget/actual-server/pull/157) Don’t make Dockerfile a symlink — thanks @j-f1
+- [#157](https://github.com/actualbudget/actual-server/pull/157) Don't make Dockerfile a symlink — thanks @j-f1
 - [#160](https://github.com/actualbudget/actual-server/pull/160) (nordigen) close window when opening /nordigen/link path — thanks @MatissJanis
 - [#163](https://github.com/actualbudget/actual-server/pull/163) (nordigen) add currency to account name — thanks @MatissJanis
 
