--- a/packages/docs/blog/2023-04-16-release-23.4.0.md
+++ b/packages/docs/blog/2023-04-16-release-23.4.0.md
@@ -16,7 +16,7 @@ Actual has now been moved to a stand-alone Docker organization. If you were prev
 The release has the following notable features:
 
 - Rules can now optionally be applied when any of their conditions match (in addition to the existing option to apply when all of their conditions match)
-- Rules: quick-create option from the transaction table (in the “X selected” menu that shows up after selecting a transaction, choose “Create rule”)
+- Rules: quick-create option from the transaction table (in the "X selected" menu that shows up after selecting a transaction, choose "Create rule")
 - Ability to hide decimal places for currencies with large numbers (in Settings → Formatting)
 - New autocomplete component (please report any bugs [here](https://github.com/actualbudget/actual/issues/773))
 - Lots of smaller improvements and bugfixes
@@ -31,17 +31,17 @@ Version: 23.4.0
 
 ### Features
 
-- [#725](https://github.com/actualbudget/actual/pull/725) A “hide decimal places” option has been added to improve readability for currencies that typically have large values. — thanks @j-f1
+- [#725](https://github.com/actualbudget/actual/pull/725) A "hide decimal places" option has been added to improve readability for currencies that typically have large values. — thanks @j-f1
 - [#792](https://github.com/actualbudget/actual/pull/792) Improved UX when setting up account links for bank-sync via Nordigen — thanks @MatissJanis
 - [#802](https://github.com/actualbudget/actual/pull/802) Add quick rule creation from transactions table in accounts page — thanks @albertogasparin
 - [#811](https://github.com/actualbudget/actual/pull/811) Allow rules to apply to "all" or "any" of the provided conditions — thanks @albertogasparin
 
 ### Enhancements
 
-- [#736](https://github.com/actualbudget/actual/pull/736) Save payee name in “imported payee” field during YNAB4/YNAB5 import — thanks @ostat
+- [#736](https://github.com/actualbudget/actual/pull/736) Save payee name in "imported payee" field during YNAB4/YNAB5 import — thanks @ostat
 - [#756](https://github.com/actualbudget/actual/pull/756) Make goal template keywords case insensitive — thanks @j-f1
 - [#762](https://github.com/actualbudget/actual/pull/762) Change when the welcome screen is shown, add a button to start by importing a file — thanks @j-f1
-- [#768](https://github.com/actualbudget/actual/pull/768) Update wording across the UI to clarify that we don’t own any servers — thanks @j-f1
+- [#768](https://github.com/actualbudget/actual/pull/768) Update wording across the UI to clarify that we don't own any servers — thanks @j-f1
 - [#774](https://github.com/actualbudget/actual/pull/774) Clarify in the UI that Account Type cannot be changed after creation — thanks @pmamberti
 - [#785](https://github.com/actualbudget/actual/pull/785) Allow importing `.blob` files from actual-server — thanks @Jackenmen
 - [#791](https://github.com/actualbudget/actual/pull/791) Replace straight quotes with curly quotes in user-visible text — thanks @j-f1
