--- a/packages/docs/blog/2023-04-16-release-23.4.1.md
+++ b/packages/docs/blog/2023-04-16-release-23.4.1.md
@@ -36,7 +36,7 @@ Version: 23.4.1
 
 ### Maintenance
 
-- [#864](https://github.com/actualbudget/actual/pull/864) Don’t check for release notes on `release/*` branches — thanks @j-f1
+- [#864](https://github.com/actualbudget/actual/pull/864) Don't check for release notes on `release/*` branches — thanks @j-f1
 - [#869](https://github.com/actualbudget/actual/pull/869) Disable ESLint when building in CI (since we have a separate linting job) — thanks @j-f1
 - [#870](https://github.com/actualbudget/actual/pull/870) Remove duplicate migration and default-db.sqlite files — thanks @j-f1
 - [#877](https://github.com/actualbudget/actual/pull/877) Convert most CommonJS imports/exports to ESM — thanks @albertogasparin
@@ -59,5 +59,5 @@ Version: 23.4.1
 
 ### Maintenance
 
-- [#181](https://github.com/actualbudget/actual-server/pull/181) Don’t check for release notes on `release/*` branches — thanks @j-f1
+- [#181](https://github.com/actualbudget/actual-server/pull/181) Don't check for release notes on `release/*` branches — thanks @j-f1
 - [#185](https://github.com/actualbudget/actual-server/pull/185) Use the proper Typescript Babel preset — thanks @albertogasparin
