--- a/packages/docs/blog/2023-05-04-release-23.5.0.md
+++ b/packages/docs/blog/2023-05-04-release-23.5.0.md
@@ -41,7 +41,7 @@ Version: 23.5.0
 ### Bugfix
 
 - [#939](https://github.com/actualbudget/actual/pull/939) Fix j/k shortcuts to move between transactions on account pages — thanks @j-f1
-- [#946](https://github.com/actualbudget/actual/pull/946) Don’t reset checked transactions when creating a schedule — thanks @j-f1
+- [#946](https://github.com/actualbudget/actual/pull/946) Don't reset checked transactions when creating a schedule — thanks @j-f1
 - [#947](https://github.com/actualbudget/actual/pull/947) Autocomplete: fix multi-autocomplete filtering UX — thanks @MatissJanis
 - [#949](https://github.com/actualbudget/actual/pull/949) Autocomplete: support touch events — thanks @MatissJanis
 - [#950](https://github.com/actualbudget/actual/pull/950) Nordigen: add fallback link to re-init bank-sync in case the popover was blocked — thanks @MatissJanis
