--- a/packages/docs/blog/2023-07-04-release-23.7.0.md
+++ b/packages/docs/blog/2023-07-04-release-23.7.0.md
@@ -34,15 +34,15 @@ Version: 23.7.0
 
 #### Enhancements
 
-- [#948](https://github.com/actualbudget/actual/pull/948) Remove support for storing account types on the account (they didn’t do anything in the budget) — thanks @j-f1
+- [#948](https://github.com/actualbudget/actual/pull/948) Remove support for storing account types on the account (they didn't do anything in the budget) — thanks @j-f1
 - [#1075](https://github.com/actualbudget/actual/pull/1075) Add a new `sync` method to the API, also sync before shutting down. — thanks @j-f1
 - [#1101](https://github.com/actualbudget/actual/pull/1101) Goals: Add remainder option to budget all extra funds automatically. — thanks @youngcw
-- [#1104](https://github.com/actualbudget/actual/pull/1104) Disable “Reset sync” button when sync is disabled — thanks @j-f1
+- [#1104](https://github.com/actualbudget/actual/pull/1104) Disable "Reset sync" button when sync is disabled — thanks @j-f1
 - [#1108](https://github.com/actualbudget/actual/pull/1108) Add action in month drop down to check template lines for proper formatting — thanks @youncw
 - [#1121](https://github.com/actualbudget/actual/pull/1121) Improve error reporting when using the API — thanks @j-f1
 - [#1122](https://github.com/actualbudget/actual/pull/1122) Added ability to save/update/delete filters within accounts page. — thanks @carkom
-- [#1137](https://github.com/actualbudget/actual/pull/1137) Nordigen: Update design of the “create account” flow — thanks @j-f1
-- [#1141](https://github.com/actualbudget/actual/pull/1141) Make the behavior of the “Server” button in the top-right corner more consistent — thanks @j-f1
+- [#1137](https://github.com/actualbudget/actual/pull/1137) Nordigen: Update design of the "create account" flow — thanks @j-f1
+- [#1141](https://github.com/actualbudget/actual/pull/1141) Make the behavior of the "Server" button in the top-right corner more consistent — thanks @j-f1
 - [#1143](https://github.com/actualbudget/actual/pull/1143) Expand / collapse all categories — thanks @joel-jeremy
 - [#1161](https://github.com/actualbudget/actual/pull/1161) Log more details when migrations are out of sync — thanks @j-f1
 - [#1176](https://github.com/actualbudget/actual/pull/1176) Automatically set category when adding a transaction to the budget category transaction list — thanks @joel-jeremy
@@ -65,8 +65,8 @@ Version: 23.7.0
 - [#1136](https://github.com/actualbudget/actual/pull/1136) Fix "find schedules" page crashing if interaction is made before loading data finishes — thanks @MatissJanis
 - [#1139](https://github.com/actualbudget/actual/pull/1139) Remove redundant usage of 'export' keyword — thanks @Shazib
 - [#1140](https://github.com/actualbudget/actual/pull/1140) Automatically remove a trailing slash from server URLs before saving them — thanks @j-f1
-- [#1144](https://github.com/actualbudget/actual/pull/1144) Revert “Make number parsing agnostic to decimal and thousands separators” because it produced undesirable behavior — thanks @j-f1
-- [#1170](https://github.com/actualbudget/actual/pull/1170) Fix “delete file” modal layout — thanks @j-f1
+- [#1144](https://github.com/actualbudget/actual/pull/1144) Revert "Make number parsing agnostic to decimal and thousands separators" because it produced undesirable behavior — thanks @j-f1
+- [#1170](https://github.com/actualbudget/actual/pull/1170) Fix "delete file" modal layout — thanks @j-f1
 - [#1171](https://github.com/actualbudget/actual/pull/1171) Fix transaction list page being blank on mobile — thanks @j-f1
 - [#1178](https://github.com/actualbudget/actual/pull/1178) A couple patches for the React Router 6 upgrade. — thanks @trevdor
 - [#1182](https://github.com/actualbudget/actual/pull/1182) Fix navigating to the per-category per-month page — thanks @j-f1
@@ -80,7 +80,7 @@ Version: 23.7.0
 - [#1252](https://github.com/actualbudget/actual/pull/1252) Fix toggling of balances in all-accounts view — thanks @MatissJanis
 - [#1260](https://github.com/actualbudget/actual/pull/1260) Fix transaction list scrolling behavior — thanks @j-f1
 - [#1262](https://github.com/actualbudget/actual/pull/1262) Fix tables appearing to have a blank area in tall-but-narrow windows — thanks @j-f1
-- [#1267](https://github.com/actualbudget/actual/pull/1267) Fix the “Change server” button being invisible on Netlify deploy previews — thanks @j-f1
+- [#1267](https://github.com/actualbudget/actual/pull/1267) Fix the "Change server" button being invisible on Netlify deploy previews — thanks @j-f1
 
 #### Maintenance
 
