--- a/packages/docs/blog/2023-08-02-release-23.8.0.md
+++ b/packages/docs/blog/2023-08-02-release-23.8.0.md
@@ -36,12 +36,12 @@ Version: 23.8.0
 - [#1240](https://github.com/actualbudget/actual/pull/1240) Avoid downloading code for the desktop UI on mobile and vice versa — thanks @j-f1
 - [#1287](https://github.com/actualbudget/actual/pull/1287) Added a negate options to the filters that are string based fields. This was added to Accounts page filters as well as the rules modal. — thanks @carkom
 - [#1329](https://github.com/actualbudget/actual/pull/1329) Goals: Enable goal templates in Report Budget — thanks @shall0pass
-- [#1334](https://github.com/actualbudget/actual/pull/1334) Square off the bottom corners of the payee list on the “Payees” page — thanks @j-f1
-- [#1335](https://github.com/actualbudget/actual/pull/1335) Hide the “Show unused payees” button unless it is relevant — thanks @j-f1
+- [#1334](https://github.com/actualbudget/actual/pull/1334) Square off the bottom corners of the payee list on the "Payees" page — thanks @j-f1
+- [#1335](https://github.com/actualbudget/actual/pull/1335) Hide the "Show unused payees" button unless it is relevant — thanks @j-f1
 - [#1344](https://github.com/actualbudget/actual/pull/1344) Goals: Use setZero function within goal templates for speed improvement — thanks @shall0pass
 - [#1350](https://github.com/actualbudget/actual/pull/1350) Add ability to apply budget prefill calculations to a single category. Includes Goal template support. — thanks @shall0pass & @kyrias
 - [#1354](https://github.com/actualbudget/actual/pull/1354) Scheduled transactions for the month to show up in Account's running balance — thanks @joel-jeremy
-- [#1371](https://github.com/actualbudget/actual/pull/1371) Improve clarity of informational message in “merge unused payees” modal — thanks @j-f1
+- [#1371](https://github.com/actualbudget/actual/pull/1371) Improve clarity of informational message in "merge unused payees" modal — thanks @j-f1
 - [#1372](https://github.com/actualbudget/actual/pull/1372) Add support for parsing TSV files using the existing CSV parser — thanks @j-f1
 - [#1373](https://github.com/actualbudget/actual/pull/1373) Allow importing the first row of a CSV file that does not contain a header row — thanks @j-f1
 - [#1391](https://github.com/actualbudget/actual/pull/1391) Begin porting some parts of the UI to look different in light mode — thanks @biohzrddd & @j-f1
@@ -60,13 +60,13 @@ Version: 23.8.0
 - [#1325](https://github.com/actualbudget/actual/pull/1325) Fix the CashFlow report crash because of the new CustomSelect — thanks @aleetsaiya
 - [#1349](https://github.com/actualbudget/actual/pull/1349) Fix bug causing transaction import in Safari to be unreliable — thanks @Cldfire
 - [#1351](https://github.com/actualbudget/actual/pull/1351) Fix a bug that user can transfer budget to the category (or group) which user want to delete — thanks @aleetsaiya
-- [#1353](https://github.com/actualbudget/actual/pull/1353) Prevent the “This is a demo build of Actual” bar from shrinking on small screen sizes — thanks @j-f1
+- [#1353](https://github.com/actualbudget/actual/pull/1353) Prevent the "This is a demo build of Actual" bar from shrinking on small screen sizes — thanks @j-f1
 - [#1363](https://github.com/actualbudget/actual/pull/1363) Fixed spelling errors in the "Repair split transactions" section of the settings page. — thanks @migillett
 - [#1366](https://github.com/actualbudget/actual/pull/1366) Fix React warning in the console — thanks @j-f1
 - [#1380](https://github.com/actualbudget/actual/pull/1380) Correct the width of the cleared/uncleared column in the transaction list — thanks @j-f1
 - [#1385](https://github.com/actualbudget/actual/pull/1385) Remove double scrollbar while the viewport is big enough and remove the horizontal scrollbar under the transaction table. — thanks @aleetsaiya
-- [#1389](https://github.com/actualbudget/actual/pull/1389) Remove non-functional “is between” filter operator — thanks @j-f1
-- [#1397](https://github.com/actualbudget/actual/pull/1397) Update the API’s `node-fetch` dependency to fix a bug where connections could unexpectedly fail — thanks @j-f1
+- [#1389](https://github.com/actualbudget/actual/pull/1389) Remove non-functional "is between" filter operator — thanks @j-f1
+- [#1397](https://github.com/actualbudget/actual/pull/1397) Update the API's `node-fetch` dependency to fix a bug where connections could unexpectedly fail — thanks @j-f1
 - [#1400](https://github.com/actualbudget/actual/pull/1400) Goals: Fix leftover $0.01 when using remainder goal — thanks @youngcw
 - [#1406](https://github.com/actualbudget/actual/pull/1406) Fix missed lines from previous merge that broke sorting. — thanks @carkom
 - [#1410](https://github.com/actualbudget/actual/pull/1410) Goals: Fix tracking of remaining funds when using priorities — thanks @youngcw
