--- a/packages/docs/blog/2024-10-03-release-24.10.0.md
+++ b/packages/docs/blog/2024-10-03-release-24.10.0.md
@@ -127,7 +127,7 @@ Important notice about the `@actual-app/api` package: starting from this release
 - [#3523](https://github.com/actualbudget/actual/pull/3523) e2e stability: wait for data-theme to switch before taking a screenshot — thanks @joel-jeremy
 - [#3525](https://github.com/actualbudget/actual/pull/3525) Expose underlying exception source when a module fails to load. — thanks @qedi-r
 - [#3526](https://github.com/actualbudget/actual/pull/3526) Fix electron build workflow for ubuntu-latest — thanks @matt-fidd
-- [#3530](https://github.com/actualbudget/actual/pull/3530) [e2e] Fix the flaky "navigates back to start page by clicking on “no server” in an empty budget file test" from onboarding.test.js — thanks @joel-jeremy
+- [#3530](https://github.com/actualbudget/actual/pull/3530) [e2e] Fix the flaky "navigates back to start page by clicking on "no server" in an empty budget file test" from onboarding.test.js — thanks @joel-jeremy
 
 ## Actual Server
 
