--- a/packages/docs/blog/2025-09-03-release-25-9-0.md
+++ b/packages/docs/blog/2025-09-03-release-25-9-0.md
@@ -69,7 +69,7 @@ This release contains the following improvements, along with numerous fixes:
 - [#5464](https://github.com/actualbudget/actual/pull/5464) Remove the automatic space added by bulk prepend/append to notes to make behaviour consistent with the rule action — thanks @matt-fidd
 - [#5471](https://github.com/actualbudget/actual/pull/5471) Adds translations to the "new transaction" page on mobile devices — thanks @milanalexandre
 - [#5485](https://github.com/actualbudget/actual/pull/5485) Display name of old payee correctly when merging — thanks @r1ch
-- [#5486](https://github.com/actualbudget/actual/pull/5486) Add missing translations in “Reports” && “Rule” — thanks @milanalexandre
+- [#5486](https://github.com/actualbudget/actual/pull/5486) Add missing translations in "Reports" && "Rule" — thanks @milanalexandre
 - [#5489](https://github.com/actualbudget/actual/pull/5489) Fixes #4036 https://github.com/actualbudget/actual/issues/4036 — thanks @emilgeo
 - [#5495](https://github.com/actualbudget/actual/pull/5495) Fix live report date mode not supporting a 2 month window — thanks @matt-fidd
 - [#5496](https://github.com/actualbudget/actual/pull/5496) Hide hold for next month option when "to budget" is negative — thanks @matt-fidd
