--- a/packages/docs/blog/2025-10-02-release-25-10-0.md
+++ b/packages/docs/blog/2025-10-02-release-25-10-0.md
@@ -65,7 +65,7 @@ This release contains the following improvements, along with numerous fixes:
 - [#5760](https://github.com/actualbudget/actual/pull/5760) Improve cleanup when opening multiple budgets through the API — thanks @matt-fidd
 - [#5761](https://github.com/actualbudget/actual/pull/5761) Optimise the way payee information is fetched. — thanks @thromer
 - [#5765](https://github.com/actualbudget/actual/pull/5765) Translations of category labels in the TransactionEdit component (mobile) — thanks @milanalexandre
-- [#5777](https://github.com/actualbudget/actual/pull/5777) Translated ‘(No payee)’ for a scheduled transaction — thanks @milanalexandre
+- [#5777](https://github.com/actualbudget/actual/pull/5777) Translated '(No payee)' for a scheduled transaction — thanks @milanalexandre
 - [#5779](https://github.com/actualbudget/actual/pull/5779) Ensure file upload size limits are respected when syncing files — thanks @matt-fidd
 - [#5782](https://github.com/actualbudget/actual/pull/5782) Fix token expiration parsing to accept numeric strings and validate special string formats. — thanks @MatissJanis
 - [#5790](https://github.com/actualbudget/actual/pull/5790) Fix live report time ranges — thanks @matt-fidd
