--- a/packages/docs/blog/2023-02-05-release-23.2.5.md
+++ b/packages/docs/blog/2023-02-05-release-23.2.5.md
@@ -17,7 +17,7 @@ The release has notable security improvements. Highlights:
 
 - e2e encryption
 - login invalidation when changing password
-- dependency upgrades to remove potential actual-server security vulnerabilities (although we don’t believe there were any severe issues)
+- dependency upgrades to remove potential actual-server security vulnerabilities (although we don't believe there were any severe issues)
 
 <!--truncate-->
 
@@ -30,7 +30,7 @@ Version: 23.2.5
 ### Features
 
 - [#355](https://github.com/actualbudget/actual/pull/355) Schedule Editor: Keep payee list open while toggling transfer payees focus — thanks @trevdor
-- [#467](https://github.com/actualbudget/actual/pull/467) Add an “Experimental Features” section in the settings — thanks @j-f1
+- [#467](https://github.com/actualbudget/actual/pull/467) Add an "Experimental Features" section in the settings — thanks @j-f1
 - [#475](https://github.com/actualbudget/actual/pull/475) Add support for filtering the rules list — thanks @j-f1
 - [#482](https://github.com/actualbudget/actual/pull/482) Add option to control the "cleared state" in Rules — thanks @shall0pass
 - [#569](https://github.com/actualbudget/actual/pull/569) List of categories in transfer money dialog — thanks @shall0pass
@@ -53,18 +53,18 @@ Version: 23.2.5
 - [#414](https://github.com/actualbudget/actual/pull/414) Fix condition mapping for payee rule creation from payee modal — thanks @winklevos
 - [#451](https://github.com/actualbudget/actual/pull/451) Fix bug where rules page may not load due to link-schedule payee dependency — thanks @winklevos
 - [#486](https://github.com/actualbudget/actual/pull/486) Fix TypeScript warning about too many files — thanks @j-f1
-- [#489](https://github.com/actualbudget/actual/pull/489) Fix “Repair split transactions” button being missing — thanks @j-f1
+- [#489](https://github.com/actualbudget/actual/pull/489) Fix "Repair split transactions" button being missing — thanks @j-f1
 - [#490](https://github.com/actualbudget/actual/pull/490) 🐛 (ynab4) transaction cleared state in imports — thanks @MatissJanis
 - [#574](https://github.com/actualbudget/actual/pull/574) Fix #488 — thanks @MatissJanis
 - [#572](https://github.com/actualbudget/actual/pull/572) fix: typo in reconciliation transaction creation — thanks @MatissJanis
 - [#591](https://github.com/actualbudget/actual/pull/591) Allow libofx to handle decoding imported files — thanks @j-f1
 - [#592](https://github.com/actualbudget/actual/pull/592) Update SelectedBalance to use useSheetValue — thanks @j-f1
-- [#599](https://github.com/actualbudget/actual/pull/599) Don’t crash when loading an invalid account ID — thanks @j-f1
+- [#599](https://github.com/actualbudget/actual/pull/599) Don't crash when loading an invalid account ID — thanks @j-f1
 - [#605](https://github.com/actualbudget/actual/pull/605) Add a suggestion to upload the imported file if reporting an import bug — thanks @j-f1
 - [#620](https://github.com/actualbudget/actual/pull/620) Fixes editing closed account names issue #616 — thanks @n1thun
 - [#629](https://github.com/actualbudget/actual/pull/629) Fix form submission on TransferTooltip when pressing enter — thanks @gsumpster
-- [#630](https://github.com/actualbudget/actual/pull/630) Skip the “Starting Balance” transaction if the balance is 0 — thanks @j-f1
-- [#632](https://github.com/actualbudget/actual/pull/632) Fix default value of “Move to a category” — thanks @j-f1
+- [#630](https://github.com/actualbudget/actual/pull/630) Skip the "Starting Balance" transaction if the balance is 0 — thanks @j-f1
+- [#632](https://github.com/actualbudget/actual/pull/632) Fix default value of "Move to a category" — thanks @j-f1
 
 ### Maintenance
 
