--- a/packages/docs/blog/2023-03-09-release-23.3.0.md
+++ b/packages/docs/blog/2023-03-09-release-23.3.0.md
@@ -12,7 +12,7 @@ The release has the following notable features:
 - _Experimental_ support for automatically syncing transactions from European bank accounts using Nordigen.
 - Filters in the transaction list can now be edited.
 - When connecting to a server for the first time, you no longer need to enter the server URL.
-- You’ll now be notified of future updates to Actual.
+- You'll now be notified of future updates to Actual.
 - Large imports will no longer break in Safari.
 
 <!--truncate-->
@@ -38,8 +38,8 @@ Version: 23.3.0
 - [#588](https://github.com/actualbudget/actual/pull/588) Updates to the template/goal feature — thanks @j-f1
 - [#648](https://github.com/actualbudget/actual/pull/648) Block enabling e2e encryption when the crypto API is unavailable — thanks @j-f1
 - [#657](https://github.com/actualbudget/actual/pull/657) Better explain the process for importing an exported file — thanks @j-f1
-- [#675](https://github.com/actualbudget/actual/pull/675) Don’t force user to re-enter password after changing it — thanks @j-f1
-- [#674](https://github.com/actualbudget/actual/pull/674) Make the “Not logged in” warning a button — thanks @j-f1
+- [#675](https://github.com/actualbudget/actual/pull/675) Don't force user to re-enter password after changing it — thanks @j-f1
+- [#674](https://github.com/actualbudget/actual/pull/674) Make the "Not logged in" warning a button — thanks @j-f1
 - [#464](https://github.com/actualbudget/actual/pull/464) Updates to the @actual-budget/api package — thanks @j-f1
 - [#676](https://github.com/actualbudget/actual/pull/676) Update the Bootstrap page to be more welcoming — thanks @j-f1
 - [#680](https://github.com/actualbudget/actual/pull/680) Intelligently adjust field for newly added action — thanks @j-f1
@@ -50,8 +50,8 @@ Version: 23.3.0
 ### Bugfix
 
 - [#660](https://github.com/actualbudget/actual/pull/660) Stop editing when clicking on blank areas of tables — thanks @j-f1
-- [#681](https://github.com/actualbudget/actual/pull/681) Don’t post messages to the worker until it is ready — thanks @j-f1
-- [#705](https://github.com/actualbudget/actual/pull/705) Don’t allow bulk editing to set a field to null — thanks @j-f1
+- [#681](https://github.com/actualbudget/actual/pull/681) Don't post messages to the worker until it is ready — thanks @j-f1
+- [#705](https://github.com/actualbudget/actual/pull/705) Don't allow bulk editing to set a field to null — thanks @j-f1
 - [#700](https://github.com/actualbudget/actual/pull/700) Fix notes button not being visible unless hovered — thanks @j-f1
 - [#706](https://github.com/actualbudget/actual/pull/706) Allow rendering a schedule in `<Value />` — thanks @j-f1
 - [#707](https://github.com/actualbudget/actual/pull/707) Fix check for crypto.subtle — thanks @j-f1
@@ -67,7 +67,7 @@ Version: 23.3.0
 - [#678](https://github.com/actualbudget/actual/pull/678) Fix error cases in displaying filters/rules — thanks @j-f1
 - [#683](https://github.com/actualbudget/actual/pull/683) upgrade yarn to v3.4.1 (latest stable) — thanks @MatissJanis
 - [#684](https://github.com/actualbudget/actual/pull/684) add interactive-tools yarn plugin — thanks @MatissJanis
-- [#689](https://github.com/actualbudget/actual/pull/689) Don’t run linting while building in CI — thanks @j-f1
+- [#689](https://github.com/actualbudget/actual/pull/689) Don't run linting while building in CI — thanks @j-f1
 - [#694](https://github.com/actualbudget/actual/pull/694) (e2e) adding e2e tests for schedules page — thanks @MatissJanis
 - [#695](https://github.com/actualbudget/actual/pull/695) (e2e) adding e2e tests for accounts: creating & closing — thanks @MatissJanis
 - [#697](https://github.com/actualbudget/actual/pull/697) moving back to create-react-app — thanks @MatissJanis
@@ -81,7 +81,7 @@ Version: 23.3.0
 - [#713](https://github.com/actualbudget/actual/pull/713) removed usage of babel-preset-jwl-app — thanks @MatissJanis
 - [#714](https://github.com/actualbudget/actual/pull/714) Upgrade better-sqlite3 to the latest version — thanks @j-f1
 - [#715](https://github.com/actualbudget/actual/pull/715) re-enable react-hooks/rules-of-hooks eslint rule — thanks @MatissJanis
-- [#717](https://github.com/actualbudget/actual/pull/717) Fix e2e test to not assume it’s been run on Feb 28, 2023 — thanks @j-f1
+- [#717](https://github.com/actualbudget/actual/pull/717) Fix e2e test to not assume it's been run on Feb 28, 2023 — thanks @j-f1
 - [#718](https://github.com/actualbudget/actual/pull/718) upgrade react-modal to v3.16.1 and remove the patch — thanks @MatissJanis
 - [#720](https://github.com/actualbudget/actual/pull/720) Enable most of the disabled ESLint rules — thanks @j-f1
 - [#721](https://github.com/actualbudget/actual/pull/721) Remove code in loot-core/src/server/spreadsheet that uses escodegen — thanks @j-f1
@@ -95,7 +95,7 @@ Version: 23.3.0
 ### Features
 
 - [#74](https://github.com/actualbudget/actual-server/pull/74) & [#145](https://github.com/actualbudget/actual-server/pull/145) Backend integration with Nordigen - account sync — thanks @fstybel & @MatissJanis
-- [#135](https://github.com/actualbudget/actual-server/pull/135) Auto-configure the client’s server URL — thanks @j-f1
+- [#135](https://github.com/actualbudget/actual-server/pull/135) Auto-configure the client's server URL — thanks @j-f1
 
 ### Bugfix
 
