--- a/upcoming-release-notes/6455.md
+++ b/upcoming-release-notes/6455.md
@@ -3,4 +3,4 @@ category: Maintenance
 authors: [MatissJanis]
 ---
 
-improve api unit test stability for local runs
+Improve api unit test stability for local runs
