Change category to Maintenance and update feature description
Updated the release notes to reflect a change in the issue enrichment feature description.

--- a/upcoming-release-notes/6461.md
+++ b/upcoming-release-notes/6461.md
@@ -1,6 +1,6 @@
 ---
-category: Enhancements
+category: Maintenance
 authors: [jfdoming]
 ---
 
-Disable issue enrichment feature to streamline issue management and reduce unnecessary data processing.
+Disable CodeRabbit issue enrichment
