Fix keyboard shortcuts in KeybordShortcutModal
Correct keyboard shortcut behavior and update list order.

--- a/upcoming-release-notes/6419.md
+++ b/upcoming-release-notes/6419.md
@@ -3,4 +3,4 @@ category: Bugfix
 authors: [Juulz]
 ---
 
-Update KeybordShortcutModal.tsx so "T" = "Set date for selected transactions" (actual behavior), _not_ "Add a new transaction".
+Update KeybordShortcutModal.tsx so "E" is set date for selected transactions. Regroup and rearrange list to match docs.
