Refactor global synced preferences to server preferences
- Removed global synced preferences implementation and related files.
- Introduced server preferences with a new slice and hooks for managing user settings.
- Updated components and hooks to utilize server preferences instead of global synced preferences.
- Adjusted Redux store and mock configurations to reflect the changes.
- Enhanced user settings consistency across devices with the new server preferences structure.

--- a/upcoming-release-notes/6234.md
+++ b/upcoming-release-notes/6234.md
@@ -1,7 +1,6 @@
 ---
-category: Features
+category: Enhancements
 authors: [lelemm]
 ---
 
-Add global synced preferences for improved user settings consistency across devices.
-
+Add server preferences for improved user settings consistency across devices.
