--- a/upcoming-release-notes/6488.md
+++ b/upcoming-release-notes/6488.md
@@ -3,4 +3,4 @@ category: Bugfix
 authors: [Faizanq]
 ---
 
-Fix mobile cover overspending modal not closing after action
+Fix mobile cover overspending amount not updating correctly when selecting categories
