Update release notes to reflect Docker tag for version 26.1.0 in documentation

--- a/packages/docs/blog/2026-01-04-release-26-1-0.md
+++ b/packages/docs/blog/2026-01-04-release-26-1-0.md
@@ -21,7 +21,7 @@ For Linux users, we have officially released to [Flathub](https://flathub.org/en
 
 <!--truncate-->
 
-Version: v26.1.0
+**Docker Tag: v26.1.0**
 
 #### Features
 
