--- a/upcoming-release-notes/6350.md
+++ b/upcoming-release-notes/6350.md
@@ -3,4 +3,4 @@ category: Features
 authors: [bcnelson]
 ---
 
-Api Tokens to allow api access for openid users
+API Tokens to allow API access for OpenID users
