docs: update release notes with all automation UI fixes

--- a/upcoming-release-notes/6565.md
+++ b/upcoming-release-notes/6565.md
@@ -3,4 +3,4 @@ category: Bugfix
 authors: [dhavalsavalia]
 ---
 
-Fix Budget Automations UI crashes when using periodic templates with decimal amounts
+Fix budget automation UI bugs: display correct period text (e.g., "every 2 weeks" instead of "each week"), fix currency conversion for simple and periodic templates to show correct amounts.
