--- a/upcoming-release-notes/6610.md
+++ b/upcoming-release-notes/6610.md
@@ -3,4 +3,4 @@ category: Bugfix
 authors: [youngcw]
 ---
 
-Fix schedule template regressions to improve functionality and user experience.
+Fix schedule template regressions where categories are being underbudgeted and to improve functionality and user experience.
