fix: apply schedule prompt fix to desktop version
Signed-off-by: majiayu000 <1835304752@qq.com>

--- a/upcoming-release-notes/6569.md
+++ b/upcoming-release-notes/6569.md
@@ -3,4 +3,4 @@ category: Bugfix
 authors: [majiayu000]
 ---
 
-Skip schedule prompt on mobile when editing transaction already linked to a schedule
+Skip schedule prompt when editing transaction already linked to a schedule
