Change category to Maintenance and update linting rules

--- a/upcoming-release-notes/6636.md
+++ b/upcoming-release-notes/6636.md
@@ -1,6 +1,6 @@
 ---
-category: Enhancements
+category: Maintenance
 authors: [MatissJanis]
 ---
 
-Update linting rules and replace deprecated @ts-ignore with @ts-expect-error for improved type safety.
+lint: patch some low-hanging fruit lint violations
