--- a/upcoming-release-notes/6689.md
+++ b/upcoming-release-notes/6689.md
@@ -3,4 +3,4 @@ category: Enhancements
 authors: [MatissJanis]
 ---
 
-Themes: improved error handling, add more themes to catalog
+Themes: improved error handling and more themes in the catalog.
