Update release note

--- a/upcoming-release-notes/6690.md
+++ b/upcoming-release-notes/6690.md
@@ -3,4 +3,4 @@ category: Enhancements
 authors: [jfdoming]
 ---
 
-Templates: support limit refill automation
+Implement missing logic for limit template type
