--- a/upcoming-release-notes/6711.md
+++ b/upcoming-release-notes/6711.md
@@ -3,4 +3,4 @@ category: Enhancements
 authors: [totallynotjon]
 ---
 
-Enhance Average Goal Template to allow adjusting the budgetted amount from the average by a percent or fixed amount
+Enhance Average Goal Template to allow adjusting the budgeted amount from the average by a percent or fixed amount
