fix some pr comments

--- a/upcoming-release-notes/6726.md
+++ b/upcoming-release-notes/6726.md
@@ -3,4 +3,4 @@ category: Features
 authors: [rockywang2025]
 ---
 
-Adds the ability to sync with US & Canada bank via Sophtron ( https://sophtron.com/ ).
+Adds the ability to sync with US & Canada bank via Sophtron ( <https://sophtron.com/> ).
