--- a/upcoming-release-notes/6746.md
+++ b/upcoming-release-notes/6746.md
@@ -3,4 +3,4 @@ category: Features
 authors: [pouwerkerk]
 ---
 
-Add public API methods for tag management (getTags, createTag, updateTag, deleteTag) with type-safe models and handlers.
+Adds API support to manage tags (`getTags`, `createTag`, `updateTag`, `deleteTag`).
