--- a/upcoming-release-notes/6764.md
+++ b/upcoming-release-notes/6764.md
@@ -3,4 +3,4 @@ category: Bugfixes
 authors: [matt-fidd]
 ---
 
-Make colors on budget page more legibile and increase number colouring consistency
+Make colors on budget page more legible and increase number coloring consistency
